[gd_scene load_steps=27 format=2]

[ext_resource path="res://Tiles/horizontal_wall.png" type="Texture" id=1]
[ext_resource path="res://Tiles/vertical_wall.png" type="Texture" id=2]
[ext_resource path="res://Tiles/top_left_corner.png" type="Texture" id=3]
[ext_resource path="res://Tiles/top_right_corner.png" type="Texture" id=4]
[ext_resource path="res://Level.gd" type="Script" id=5]
[ext_resource path="res://Area2D.gd" type="Script" id=6]
[ext_resource path="res://ball.png" type="Texture" id=7]
[ext_resource path="res://Ball.gd" type="Script" id=8]
[ext_resource path="res://Paddle.gd" type="Script" id=9]
[ext_resource path="res://paddle.png" type="Texture" id=10]
[ext_resource path="res://Tiles/yellow_brick.png" type="Texture" id=11]
[ext_resource path="res://Tiles/white_brick.png" type="Texture" id=12]
[ext_resource path="res://Tiles/blue_brick.png" type="Texture" id=13]
[ext_resource path="res://Tiles/red_brick.png" type="Texture" id=14]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=5]
0/name = "horizontal_wall.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "vertical_wall.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "top_left_corner.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "top_right_corner.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 49.9363, 10 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 32, 0, 32, 16, 0, 16 )

[sub_resource type="TileSet" id=12]
0/name = "yellow_brick.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "white_brick.png 1"
1/texture = ExtResource( 12 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "blue_brick.png 2"
2/texture = ExtResource( 13 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "red_brick.png 3"
3/texture = ExtResource( 14 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[node name="Node2D" type="Node2D"]

[node name="Level" type="TileMap" parent="."]
position = Vector2( 0, 32 )
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
collision_use_kinematic = true
collision_friction = 0.0
format = 1
tile_data = PoolIntArray( 7, 2, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 3, 0, 65543, 1, 0, 65562, 1, 0, 131079, 1, 0, 131098, 1, 0, 196615, 1, 0, 196634, 1, 0, 262151, 1, 0, 262170, 1, 0, 327687, 1, 0, 327706, 1, 0, 393223, 1, 0, 393242, 1, 0, 458759, 1, 0, 458778, 1, 0, 524295, 1, 0, 524314, 1, 0, 589831, 1, 0, 589850, 1, 0, 655367, 1, 0, 655386, 1, 0, 720903, 1, 0, 720922, 1, 0, 786439, 1, 0, 786458, 1, 0, 851975, 1, 0, 851994, 1, 0, 917511, 1, 0, 917530, 1, 0, 983047, 1, 0, 983066, 1, 0, 1048583, 1, 0, 1048602, 1, 0, 1114119, 1, 0, 1114138, 1, 0 )
script = ExtResource( 5 )

[node name="BallArea" type="KinematicBody2D" parent="Level"]
editor/display_folded = true
position = Vector2( 545.517, 500.266 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Ball" type="Sprite" parent="Level/BallArea"]
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="BallCollisionShape" type="CollisionShape2D" parent="Level/BallArea"]
shape = SubResource( 6 )

[node name="Paddle" type="KinematicBody2D" parent="Level"]
editor/display_folded = true
position = Vector2( 545.595, 551.242 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Level/Paddle"]
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 100, 20 )

[node name="PaddleCollisionShape" type="CollisionShape2D" parent="Level/Paddle"]
shape = SubResource( 7 )

[node name="Bricks" type="TileMap" parent="Level"]
tile_set = SubResource( 12 )
cell_size = Vector2( 32, 16 )
format = 1
tile_data = PoolIntArray( 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 393228, 1, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 393236, 3, 0, 393237, 1, 0, 458764, 1, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 1, 0, 524300, 1, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 524309, 1, 0, 589836, 1, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 3, 0, 589845, 1, 0, 655372, 1, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 655381, 1, 0, 720908, 1, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 851977, 1, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 1, 0, 917513, 1, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 3, 0, 917526, 3, 0, 917527, 3, 0, 917528, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 3, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 3, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 1048588, 1, 0, 1048589, 3, 0, 1048590, 0, 0, 1048591, 1, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 1, 0, 1048595, 0, 0, 1048596, 3, 0, 1048597, 1, 0, 1114124, 1, 0, 1114125, 3, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 3, 0, 1114133, 1, 0, 1179660, 1, 0, 1179661, 3, 0, 1179662, 3, 0, 1179663, 3, 0, 1179664, 3, 0, 1179665, 3, 0, 1179666, 3, 0, 1179667, 3, 0, 1179668, 3, 0, 1179669, 1, 0, 1245196, 1, 0, 1245197, 3, 0, 1245198, 3, 0, 1245199, 3, 0, 1245200, 3, 0, 1245201, 3, 0, 1245202, 3, 0, 1245203, 3, 0, 1245204, 3, 0, 1245205, 1, 0, 1310732, 1, 0, 1310733, 3, 0, 1310734, 3, 0, 1310735, 3, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 3, 0, 1310739, 3, 0, 1310740, 3, 0, 1310741, 1, 0, 1376268, 1, 0, 1376269, 3, 0, 1376270, 3, 0, 1376271, 3, 0, 1376272, 3, 0, 1376273, 3, 0, 1376274, 3, 0, 1376275, 3, 0, 1376276, 3, 0, 1376277, 1, 0, 1441805, 1, 0, 1441806, 3, 0, 1441807, 3, 0, 1441808, 3, 0, 1441809, 3, 0, 1441810, 3, 0, 1441811, 3, 0, 1441812, 1, 0, 1507342, 1, 0, 1507343, 3, 0, 1507344, 3, 0, 1507345, 3, 0, 1507346, 3, 0, 1507347, 1, 0, 1572879, 1, 0, 1572880, 3, 0, 1572881, 3, 0, 1572882, 1, 0, 1638416, 1, 0, 1638417, 1, 0 )

[node name="WinLoseLabel" type="Label" parent="."]
visible = false
margin_left = 396.117
margin_top = 255.034
margin_right = 452.117
margin_bottom = 269.034
rect_scale = Vector2( 4, 4 )
text = "You Win!"
align = 1

[node name="LivesLabel" type="Label" parent="."]
margin_left = 945.101
margin_top = 6.47395
margin_right = 994.101
margin_bottom = 20.4739
text = "Lives: 3"

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 6.0
margin_top = 2.0
margin_right = 214.0
margin_bottom = 33.0
text = "Score: 0"

